Inicio rotas de login

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "authors": [
         {
             "name": "diogo vanderlan",
-            "email": "diogo.vanderlan@gmail.com"
+            "email": "diogo.vanderlan@gmail.com",
+            "name": "Gustado Delatore ",
+            "email": "gugadellatorre@gmail.com"
             
 
         }
